fix: correct non-visible images (Sat, Mar 12, 2023, 21:32)

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     margin-left: auto;
     margin-right: auto;
     width: 450px;
-    display: none;
+    
 }
 
 .images:hover {
